--- a/SwiftTex.xcodeproj/xcshareddata/xcschemes/SwiftTexMac.xcscheme
+++ b/SwiftTex.xcodeproj/xcshareddata/xcschemes/SwiftTexMac.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "C5AC7A99257E34B400FD2307"
-               BuildableName = "Formulas.app"
-               BlueprintName = "Formulas"
+               BlueprintIdentifier = "C5AC7BBC257E408500FD2307"
+               BuildableName = "SwiftTexMac.framework"
+               BlueprintName = "SwiftTexMac"
                ReferencedContainer = "container:SwiftTex.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -50,16 +50,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "C5AC7A99257E34B400FD2307"
-            BuildableName = "Formulas.app"
-            BlueprintName = "Formulas"
-            ReferencedContainer = "container:SwiftTex.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -67,16 +57,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "C5AC7A99257E34B400FD2307"
-            BuildableName = "Formulas.app"
-            BlueprintName = "Formulas"
+            BlueprintIdentifier = "C5AC7BBC257E408500FD2307"
+            BuildableName = "SwiftTexMac.framework"
+            BlueprintName = "SwiftTexMac"
             ReferencedContainer = "container:SwiftTex.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
