Open plain text files. next need to define my own file format

--- a/Formulas/Info.plist
+++ b/Formulas/Info.plist
@@ -11,7 +11,7 @@
 			<string>Editor</string>
 			<key>LSItemContentTypes</key>
 			<array>
-				<string>com.example.plain-text</string>
+				<string>public.plain-text</string>
 			</array>
 			<key>NSDocumentClass</key>
 			<string>$(PRODUCT_MODULE_NAME).Document</string>
